syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./game;game";
package game;

service Game{
  //获得用户连接的服务器信息
  rpc GetConnData(UserIDInfo)returns(ConnResponse);
  //创建用户连接的服务器信息
  rpc RecordConnData(RecordConnInfo)returns(google.protobuf.Empty);
  //删除用户连接服务器信息
  rpc DelConnData(DelConnInfo)returns(google.protobuf.Empty);

  //查询房间对应处理服务器信息
  rpc GetRoomServer(RoomIDInfo)returns(RoomServerInfo);
  //删除房间对应处理服务器信息
  rpc DelRoomServer(RoomIDInfo)returns(google.protobuf.Empty);
  //创建房间对应处理服务器信息
  rpc RecordRoomServer(RecordRoomServerInfo)returns(google.protobuf.Empty);

  //获得排行榜信息
  rpc GetRanks(google.protobuf.Empty)returns(RanksResponse);
  //更新排行榜
  rpc UpdateRanks(UpdateRanksInfo)returns(google.protobuf.Empty);


  //查询所有房间
  rpc SearchAllRoom(google.protobuf.Empty)returns(AllRoomInfo);
  //设置全局房间
  rpc SetGlobalRoom(RoomInfo)returns (google.protobuf.Empty);
  //删除房间
  rpc DeleteRoom(RoomIDInfo)returns (google.protobuf.Empty);
  //查询房间
  rpc SearchRoom(RoomIDInfo)returns (RoomInfo);
}

message RecordRoomServerInfo{
  uint32 roomID=1;
  string serverInfo=2;
}

message RoomServerInfo{
  string serverInfo=1;
}

message DelConnInfo{
  uint32 id=1;
}

message ConnResponse{
  string serverInfo=1;
}

message RecordConnInfo{
  string serverInfo=1;
  uint32 id=2;
}

message UserRankInfo{
  uint32 id=1;
  uint64 score=2;
  uint64 gametimes=3;
}

message RanksResponse{
  repeated UserRankInfo info=1;
}

message UpdateRanksInfo{
  uint32 userID=1;
  uint32 addScore=2;
  uint32 addGametimes=3;
}

message IsOK{
  bool isOK=1;
}

message UseGoldRequest{
  uint32 id=1;
  uint32 count=2;
}

message UseDiamondInfo{
  uint32 id=1;
  uint32 count=2;
}

message UseItemInfo{
  uint32 id=1;
  repeated uint32 items=2;
}

message UserItemsInfo{
  uint32 id=1;
  uint32 gold=2;
  uint32 diamond=3;
  uint32 apple=4;
  uint32 banana=5;
}

enum Type{
  Apple=0;
  Banana=1;
}

message UserIDInfo{
  uint32 id=1;
}

message UserItemsInfoResponse{
  uint32 id=1;
  uint32 gold=2;
  uint32 diamond=3;
  //道具
  repeated uint32 items=4;
}

message AddGoldRequest{
  uint32 id=1;
  uint32 count=2;
}

message AddDiamondInfo{
  uint32 id=1;
  uint32 count=2;
}

message AddItemInfo{
  uint32 id=1;
  repeated uint32 items=2;
}

message RoomIDInfo {
  uint32 RoomID=1;
}

message RoomUser{
  uint32 ID=1;
  bool Ready=2;
}

message RoomInfo{
  uint32 RoomID=1;
  uint32 MaxUserNumber=2;
  uint32 GameCount=3;
  uint32 UserNumber=4;
  uint32 RoomOwner=5;
  bool RoomWait=6;
  repeated RoomUser Users=7;
  string RoomName=8;
}

message AllRoomInfo{
  repeated RoomInfo AllRoomInfo=1;
}